# api/ambulance-wl.openapi.yaml
@@ -13,10 +13,12 @@ info:
     name: CC BY 4.0
     url: https://creativecommons.org/licenses/by/4.0/
 tags:
+  - name: ambulances
+    description: Ambulance details
   - name: ambulanceWaitingList
     description: Ambulance Waiting List API
   - name: ambulanceConditions
-    description: Patient conditions and symptoms handled in the ambulance  
+    description: Patient conditions and symptoms handled in the ambulance
 paths:
   "/waiting-list/{ambulanceId}/entries":
     get:
@@ -71,8 +73,7 @@ paths:
         required: true
       responses:
         "200":
-          description: >-
-            Value of the waiting list entry with re-computed estimated time of
+          description: Value of the waiting list entry with re-computed estimated time of
             ambulance entry
           content:
             application/json:
@@ -86,7 +87,7 @@ paths:
         "404":
           description: Ambulance with such ID does not exists
         "409":
-          description: Entry with the specified id already exists      
+          description: Entry with the specified id already exists
   "/waiting-list/{ambulanceId}/entries/{entryId}":
     get:
       tags:
@@ -216,7 +217,57 @@ paths:
                 response:
                   $ref: "#/components/examples/ConditionsListExample"
         "404":
-          description: Ambulance with such ID does not exists                
+          description: Ambulance with such ID does not exists
+  /ambulance:
+    post:
+      tags:
+        - ambulances
+      summary: Saves new ambulance definition
+      operationId: createAmbulance
+      description: Use this method to initialize new ambulance in the system
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Ambulance"
+            examples:
+              request-sample:
+                $ref: "#/components/examples/AmbulanceExample"
+        description: Ambulance details to store
+        required: true
+      responses:
+        "200":
+          description: Value of stored ambulance
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Ambulance"
+              examples:
+                updated-response:
+                  $ref: "#/components/examples/AmbulanceExample"
+        "400":
+          description: Missing mandatory properties of input object.
+        "409":
+          description: Entry with the specified id already exists
+  "/ambulance/{ambulanceId}":
+    delete:
+      tags:
+        - ambulances
+      summary: Deletes specific ambulance
+      operationId: deleteAmbulance
+      description: Use this method to delete the specific ambulance from the system.
+      parameters:
+        - in: path
+          name: ambulanceId
+          description: pass the id of the particular ambulance
+          required: true
+          schema:
+            type: string
+      responses:
+        "204":
+          description: Item deleted
+        "404":
+          description: Ambulance with such ID does not exist
 components:
   schemas:
     WaitingListEntry:
@@ -281,6 +332,34 @@ components:
           example: 20
       example:
         $ref: "#/components/examples/ConditionExample"
+    Ambulance:
+      type: object
+      required:
+        - id
+        - name
+        - roomNumber
+      properties:
+        id:
+          type: string
+          example: dentist-warenova
+          description: Unique identifier of the ambulance
+        name:
+          type: string
+          example: Zubná ambulancia Dr. Warenová
+          description: Human readable display name of the ambulance
+        roomNumber:
+          type: string
+          example: 356 - 3.posch
+        waitingList:
+          type: array
+          items:
+            $ref: "#/components/schemas/WaitingListEntry"
+        predefinedConditions:
+          type: array
+          items:
+            $ref: "#/components/schemas/Condition"
+      example:
+        $ref: "#/components/examples/AmbulanceExample"
   examples:
     WaitingListEntryExample:
       summary: Ľudomír Zlostný waiting
@@ -298,6 +377,53 @@ components:
           value: Nevoľnosť
           code: nausea
           reference: https://zdravoteka.sk/priznaky/nevolnost/
+    AmbulanceExample:
+      summary: Sample GP ambulance
+      description: |
+        Example of GP ambulance with waiting list and predefined conditions
+      value:
+        id: gp-warenova
+        name: Ambulancia všeobecného lekárstva Dr. Warenová
+        roomNumber: 356 - 3.posch
+        waitingList:
+          - id: x321ab3
+            name: Jožko Púčik
+            patientId: 460527-jozef-pucik
+            waitingSince: 2038-12-24T10:05:00.000Z
+            estimatedStart: 2038-12-24T10:35:00.000Z
+            estimatedDurationMinutes: 15
+            condition: null
+            value: Teploty
+            code: subfebrilia
+            reference: https://zdravoteka.sk/priznaky/zvysena-telesna-teplota/
+          - id: x321ab4
+            name: Ferdinand Trety
+            patientId: 780907-ferdinand-tre
+            waitingSince: 2038-12-24T10:25:00.000Z
+            estimatedStart: 2038-12-24T10:50:00.000Z
+            estimatedDurationMinutes: 25
+            condition: null
+            value: Nevoľnosť
+            code: nausea
+            reference: https://zdravoteka.sk/priznaky/nevolnost/
+        predefinedConditions:
+          - value: Teploty
+            code: subfebrilia
+            reference: https://zdravoteka.sk/priznaky/zvysena-telesna-teplota/
+            typicalDurationMinutes: 20
+          - value: Nevoľnosť
+            code: nausea
+            reference: https://zdravoteka.sk/priznaky/nevolnost/
+            typicalDurationMinutes: 45
+          - value: Kontrola
+            code: followup
+            typicalDurationMinutes: 15
+          - value: Administratívny úkon
+            code: administration
+            typicalDurationMinutes: 10
+          - value: Odber krvi
+            code: blood-test
+            typicalDurationMinutes: 10
     ConditionExample:
       summary: Conditions and symptoms
       description: list of few symptoms that can be chosen by patients
@@ -337,11 +463,11 @@ components:
       value:
         - value: Teploty
           code: subfebrilia
-          reference: "https://zdravoteka.sk/priznaky/zvysena-telesna-teplota/"
+          reference: https://zdravoteka.sk/priznaky/zvysena-telesna-teplota/
           typicalDurationMinutes: 20
         - value: Nevoľnosť
           code: nausea
-          reference: "https://zdravoteka.sk/priznaky/nevolnost/"
+          reference: https://zdravoteka.sk/priznaky/nevolnost/
           typicalDurationMinutes: 45
         - value: Kontrola
           code: followup
@@ -351,4 +477,4 @@ components:
           typicalDurationMinutes: 10
         - value: Odber krvi
           code: blood-test
-          typicalDurationMinutes: 10        
+          typicalDurationMinutes: 10
